admin/src/scss/_write.scss
/**
* 编写页面
*/

.typecho-post-area {
  .edit-draft-notice {
    color: #999;
    font-size: .92857em;

    a {
      color: #B94A48;
    }
  }

  .typecho-label {
    display: block;
    margin: 1em 0 -0.5em;
    font-weight: bold;
  }

  .submit {
    display: flex;
    justify-content: space-between;

    #auto-save-message {
      color: #999;
      font-size: .92857em;
    }

    .left {
      display: flex;
      align-items: center;

      > * {
        margin-right: 8px;
      }
    }

    .right {
      display: flex;
      align-items: center;
      justify-content: flex-end;

      > * {
        margin-left: 8px;
      }
    }
  }

  input.title {
    font-size: 1.17em;
    font-weight: bold;
  }

  .url-slug {
    margin-top: -0.5em;
    color: #AAA;
    font-size: .92857em;
    word-break: break-word;
  }

  #slug {
    padding: 2px;
    border: none;
    background: #FFFBCC;
    color: #666;
  }

  #text {
    resize: none;
  }

  .description {
    margin-top: -0.5em;
    color: #999;
    font-size: .92857em;
  }

  /**
   * 自定义字段
   */
  #custom-field {
    margin: 1em 0;
    padding: 10px 15px;
    background: #FFF;

    summary {
      font-weight: bold;
      cursor: pointer;

      &:hover {
        color: #467B96;
      }

      &::marker {
        color: #BBB;
      }
    }

    .add {
      display: flex;
      justify-content: space-between;
      align-items: center;
      margin-top: 10px;

      .description {
        margin-top: 0;
      }
    }

    p.description {
      text-align: left;
      margin-top: 0;
    }

    .typecho-label {
      margin: 0;

      a {
        display: block;
        color: #444;

        &:hover {
          color: #467B96;
          text-decoration: none;
        }
      }
    }

    .fields {
      list-style: none;
      margin: 10px 0 0 0;
      padding: 0;

      .field {
        display: flex;
        padding-bottom: 10px;
        border-bottom: 1px solid #F0F0EC;
        margin-bottom: 10px;

        &:last-child {
          margin-bottom: 0;
        }

        .field-name {
          display: flex;

          input[name="fieldNames[]"] {
            height: 27px;
            width: 150px;
            margin-right: 10px;
          }
        }

        .field-value {
          margin-left: 10px;
          flex: 1;
          display: flex;

          textarea[name="fieldValues[]"] {
            flex: 1;
            margin-right: 10px;
            resize: none;
          }
        }

        @include screen(phone, max) {
          flex-flow: column;

          .field-value {
            margin-left: 0;
            margin-top: 10px;
          }
        }
      }
    }

    select { height: 27px; }
  }

  /**
   * 侧边栏
   */
  #edit-secondary {
    margin-top: 1em;

    .category-option ul {
      list-style: none;
      border: 1px solid #D9D9D6;
      padding: 6px 12px;
      max-height: 240px;
      overflow: auto;
      background-color: #FFF;
      border-radius: 2px;

      li {
        margin: 3px 0;
      }
    }

    #advance-panel {
      summary {
        line-height: 25px;
      }

      .visibility-option ul,
      .allow-option ul {
        list-style: none;
        padding: 0;
      }
    }
  }
}

